Fix dark mode in home

--- a/movie_library/static/css/movies.css
+++ b/movie_library/static/css/movies.css
@@ -32,10 +32,8 @@
   background-color: var(--accent-colour);
 }
 
-
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
   margin: 0;
   padding: 0;
 }
@@ -60,7 +58,7 @@ h1 {
 }
 
 .movie-card {
-  background-color: white;
+  background-color: var(--background-color);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -79,7 +77,8 @@ h1 {
 }
 
 .movie-card h2 {
-  color: #333;
+  font-size: medium;
+  color: var(--text);
   margin: 15px 0 5px 0;
 }
 
